--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,5 +18,7 @@
         </ul>
         <button type="submit">로그인</button>
     </form>
+
+    <a href="/oauth2/authorization/google">구글 로그인</a><br/>
 </body>
 </html>
