--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -5,9 +5,10 @@
     <title>main</title>
 </head>
 <body>
-<h1>user 메인</h1>
+<h1>admin 메인</h1>
 <p th:text="${#authentication.name}"></p>
 님 안녕하세요
+
 <a href="/logout">로그아웃하기</a>
 </body>
 </html>
