--- a/src/main/resources/templates/cel/main.html
+++ b/src/main/resources/templates/cel/main.html
@@ -8,7 +8,11 @@
 <h1>admin 메인</h1>
 <p th:text="${#authentication.name}"></p>
 님 안녕하세요
-
 <a href="/logout">로그아웃하기</a>
+<hr/>
+
+<a href="/user/sub/list">my 팬들이 있는 곳으로....</a><br/>
+<a href="/pub/list">나도 구독하기</a><br/>
+
 </body>
 </html>
