--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -11,7 +11,7 @@
 <a href="/logout">로그아웃하기</a>
 <hr/>
 
-<a href="/user/sub/list">my 구독 리스트로 떠나기</a><br/>
+<a href="/sub/list">my 구독 리스트로 떠나기</a><br/>
 <a href="/pub/list">구독하기</a><br/>
 
 </body>
